--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
  }
 .main-menu{
     background-color: #d8e4ff;
-    padding-top: 2%;
+    padding-top: 1%;
     padding-left: 1%;
 }
 
@@ -80,6 +80,9 @@ border-radius: 5px;
     border: 2px solid #45d8f9;
 border-radius: 5px; 
 }
+.btn-cn a{
+    text-decoration: none;
+}
 
 .title-text{
     padding-top: 150px;
@@ -87,4 +90,18 @@ border-radius: 5px;
 }
 .logo{
 text-decoration: none;
+}
+
+.bann{
+    width: 95%;
+}
+.bann1{
+    padding-top: 120px;
+    width: 100%;
+}
+.about{
+    padding-top: 2%;
+}
+.contactme{
+    text-decoration: none;
 }
