--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,9 @@ border: 2px solid #45d8f9;
 background-color: #45d8f9;
 border-radius: 5px;
 }
+.btn a{
+     text-decoration: none;
+}
 
 .btn-cn{
 
